[gd_scene load_steps=7 format=3 uid="uid://18et2tcbrm1o"]

[ext_resource type="Script" path="res://Scenes/GUI/GUI.gd" id="1_qmn8n"]
[ext_resource type="PackedScene" uid="uid://b3lsn0r0p8v06" path="res://Scenes/enemy.tscn" id="2_xj1s7"]
[ext_resource type="Texture2D" uid="uid://cyfv5rxo6ivoy" path="res://assets/Tilesets/Tileset.png" id="3_i3r86"]
[ext_resource type="PackedScene" uid="uid://cdi2wmrgwgt5k" path="res://Scenes/Turrets/Handgun/handgun.tscn" id="3_xa8dw"]
[ext_resource type="PackedScene" uid="uid://bcek2ic3fiaai" path="res://Scenes/Turrets/Rifle/rifle.tscn" id="4_mxwnc"]
[ext_resource type="PackedScene" uid="uid://bv22gs6clnok3" path="res://Scenes/Turrets/Bazooka/bazooka.tscn" id="5_mrevl"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_qmn8n")
Enemy = ExtResource("2_xj1s7")
Handgun = ExtResource("3_xa8dw")
Rifle = ExtResource("4_mxwnc")
Bazooka = ExtResource("5_mrevl")

[node name="Buttons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Buttons"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Start" type="Button" parent="Buttons/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Start Wave"

[node name="Build" type="Button" parent="Buttons/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Build"

[node name="InfoPanel" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -98.0
offset_right = 40.0
offset_bottom = -58.0
grow_vertical = 0
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="InfoPanel"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 40.0
mouse_filter = 1
color = Color(0.439216, 0.439216, 0.439216, 0.439216)

[node name="Label" type="Label" parent="InfoPanel/ColorRect"]
layout_mode = 0
offset_right = 41.0
offset_bottom = 26.0
mouse_filter = 1
text = "#info
"

[node name="BuildOptions" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="BuildOptions"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Standard" type="Button" parent="BuildOptions/HBoxContainer"]
layout_mode = 2
text = "Standard
"

[node name="Advanced" type="Button" parent="BuildOptions/HBoxContainer"]
layout_mode = 2
text = "Advanced"

[node name="Ultimate" type="Button" parent="BuildOptions/HBoxContainer"]
layout_mode = 2
text = "Ultimate"

[node name="Back" type="Button" parent="BuildOptions/HBoxContainer"]
layout_mode = 2
text = "Back"

[node name="Lives" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Lives"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -61.0
offset_bottom = 200.0
grow_horizontal = 0

[node name="Label" type="Label" parent="Lives/VBoxContainer"]
layout_mode = 2
text = "Lives"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="Lives/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
value = 100.0
fill_mode = 2

[node name="Cookies" type="Label" parent="Lives/VBoxContainer"]
layout_mode = 2
text = "Cookies"

[node name="CookiesCount" type="Label" parent="Lives/VBoxContainer"]
layout_mode = 2
text = "5
"
horizontal_alignment = 1

[node name="TopInfo" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 130.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TopInfo"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LevelLabel" type="Label" parent="TopInfo/HBoxContainer"]
layout_mode = 2
text = "Progress"

[node name="ValidCursor" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_i3r86")
region_enabled = true
region_rect = Rect2(0, 64, 64, 64)

[node name="InvalidCursor" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_i3r86")
region_enabled = true
region_rect = Rect2(64, 64, 64, 64)

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="Buttons/HBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Buttons/HBoxContainer/Build" to="." method="_on_build_pressed"]
[connection signal="pressed" from="BuildOptions/HBoxContainer/Standard" to="." method="_on_standard_pressed"]
[connection signal="pressed" from="BuildOptions/HBoxContainer/Advanced" to="." method="_on_advanced_pressed"]
[connection signal="pressed" from="BuildOptions/HBoxContainer/Ultimate" to="." method="_on_ultimate_pressed"]
[connection signal="pressed" from="BuildOptions/HBoxContainer/Back" to="." method="_on_back_pressed"]
